Add endpoint to update a graph
